@@ -1,5 +1,12 @@
 $Id$
 
+2015-10-13  Casper Dik  <...>
+
+	os_solaris.cpp: Detect SATA devices as SCSI devices.  This adds
+	support for auto detection of SATA devices behind SAT layer.
+	Set USCSI_SILENT flag to suppress /dev/console messages on command
+	error.
+
 2015-10-11  Christian Franke  <franke@computer.org>
 
 	drivedb.h: SiliconMotion based SSDs: Transcend SSD370S, SSD420,
